--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "author": "Robert Rodriguez",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "express": "^4.21.1",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^6.6.1",
     "validator": "^13.12.0"
   },
